--- a/assignment1.html
+++ b/assignment1.html
@@ -25,7 +25,7 @@
       <h5>Art</h5>
         <p>6 hours in addition to the Art course completed for the Fine Arts Core from the following courses: ART 103, 104, or 109 and 12 hours from ART 226, 232, 233, 235, 236, 252, 261, 262, 284, 357, or 363; or</p>
       <h5>Music</h5>
-        <<p>6 hours in addition to the Music course completed for the Fine Arts Core from the follwing courses: MUS 118 or 119, 121, 126, or from Applied Music study (MUS 131-138 or 231-238): and 6 hours from the following: MUS 101 and 107, or 102 and 108; and 6 hours from the following: MUS 167, 175, 205, 207, 265, 360, or up to two credit hours of a music ensemble (MUS 139 or 239). Auditions may be required by the School of Music for some of these courses; or</p>
+        <p>6 hours in addition to the Music course completed for the Fine Arts Core from the follwing courses: MUS 118 or 119, 121, 126, or from Applied Music study (MUS 131-138 or 231-238): and 6 hours from the following: MUS 101 and 107, or 102 and 108; and 6 hours from the following: MUS 167, 175, 205, 207, 265, 360, or up to two credit hours of a music ensemble (MUS 139 or 239). Auditions may be required by the School of Music for some of these courses; or</p>
       <h5>Theatre</h5>
         <p>18 hours from the following: DAN 119; THE 101, 102, 110, 130, 160, 258, 260, 261 or 344.</p>
     <h4>Additional Arts Technology Study (15 hours)</h4>
