--- a/assignment1.html
+++ b/assignment1.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Arts Technology Progooooram (ATK)</title>
+    <title>Arts Technology Program (ATK)</title>
   </head>
   <body>
     <h1>Arts Technology Program (ATK)</h1>
