--- a/assignment2/classes.html
+++ b/assignment2/classes.html
@@ -5,6 +5,7 @@
     <title>ATK Classes</title>
   </head>
   <body>
+<img src="Banner15" alt="Creative technologies header image" >
   <h1>Arts Technology Program (ATK)</h1>
   <h2>Arts Technology Courses (ATK)</h2>
     <h3>BASIC SKILLS IN THE DIGITAL ARTS</h3>
@@ -31,5 +32,11 @@
       <p>Pursuit of individualized creative projects in Arts Technology. May include periodic critiques with other students pursuing directed projects. Multiple enrollments are allowed for a maximum of 6 hours.  Prerequisite: Consent of the instructor.</p>
     <h4>398 PROFESSIONAL PRACTICE: COOPERATIVE EDUCATION/INTERNSHIP IN ARTS MICRO COMPUTER APPLICATIONS</h4>
       <p>Internship providing the opportunity to apply knowledge of arts technology in arts agencies, business and/or education settings.  Prerequisites: ATK 201; 1 course selected from ATK 301; MUS 211; or ART 371 or THE 360. Junior/senior standing in area of concentration; 2.50 G.P.A.</p>
+      <h3>Navigation</h3>
+      <ul>
+        <li><a href="assignment2.html">ATK Home</a></li>
+        <li><a href="classes.html">ATK Classes</a></li>
+        <li><a href="requirements.html">ATK Course Requirements</a></li>
+      </ul>
   </body>
 </html>
