--- a/assignment2.html
+++ b/assignment2.html
@@ -5,6 +5,7 @@
     <title>Home</title>
   </head>
   <body>
+    <img src="Header.jpg" alt="Creative technologies header image" >
     <h1>Arts Technology Program (ATK)</h1>
         <p><b>110 Center for Visual Arts<br>
         Phone:</b> (309) 438-3921<br>
@@ -13,8 +14,10 @@
     <h2>MAJOR IN ARTS TECHNOLOGY</h2>
       <p>The major in Arts Technology is a 55-hour interdisciplinary program in the College of Fine Arts that emphasizes theory, design, and practice in the application of computer technology to art, music, and theatre. The degree provides undergraduate training and experiences in arts technology to better prepare students with a broad range of knowledge and skills in multimedia design, including digital video and sound, computer graphics and theatre design, digital and MIDI music, and web design.</p>
     <h3>Navigation</h3>
-    <a href="home.html">ATK Home</a>
-    <a href="classes.html">ATK Classes</a>
-    <a href="requirements.html">ATK Course Requirements</a>
+    <ul>
+      <li><a href="assignment2.html">ATK Home</a></li>
+      <li><a href="classes.html">ATK Classes</a></li>
+      <li><a href="requirements.html">ATK Course Requirements</a></li>
+    </ul>
   </body>
 </html>
