--- a/assignment2/requirements.html
+++ b/assignment2/requirements.html
@@ -5,6 +5,7 @@
     <title>ATK Course Requirements</title>
   </head>
   <body>
+  <img src="Banner20.jpg" alt="Creative technologies header image" >
   <h1>Arts Technology Program (ATK)</h1>
   <h2>Course Requirements</h2>
     <h3>Admission and Retention Requirements:</h3>
@@ -33,5 +34,11 @@
       </ul>
     <h4>Capstone Experience in Arts Technology (3 hours)</h4>
       <p>Internship in Arts Technology (ATK 398 or comparable culminating experience in multimedia design as approved by the program advisor e.g. ATK 260).</p>
+  <h3>Navigation</h3>
+      <ul>
+        <li><a href="assignment2.html">ATK Home</a></li>
+        <li><a href="classes.html">ATK Classes</a></li>
+        <li><a href="requirements.html">ATK Course Requirements</a></li>
+      </ul>
   </body>
 </html>
