--- a/assignment2.html
+++ b/assignment2.html
@@ -16,8 +16,8 @@
     <h3>Navigation</h3>
     <ul>
       <li><a href="assignment2.html">ATK Home</a></li>
-      <li><a href="assignment2/classes.html">ATK Classes</a></li>
-      <li><a href="assignment2/requirements.html">ATK Course Requirements</a></li>
+      <li><a href="classes.html">ATK Classes</a></li>
+      <li><a href="requirements.html">ATK Course Requirements</a></li>
     </ul>
   </body>
 </html>
