--- a/assignment2.html
+++ b/assignment2.html
@@ -5,7 +5,7 @@
     <title>Home</title>
   </head>
   <body>
-    <img src="Header.jpg" alt="Creative technologies header image" >
+    <img src="images/Header.jpg" alt="Creative technologies header image" >
     <h1>Arts Technology Program (ATK)</h1>
         <p><b>110 Center for Visual Arts<br>
         Phone:</b> (309) 438-3921<br>
