--- a/classes.html
+++ b/classes.html
@@ -5,7 +5,7 @@
     <title>ATK Classes</title>
   </head>
   <body>
-<img src="Banner15.jpg" alt="Creative technologies header image" >
+<img src="images/Banner15.jpg" alt="Creative technologies header image" >
   <h1>Arts Technology Program (ATK)</h1>
   <h2>Arts Technology Courses (ATK)</h2>
     <h3>BASIC SKILLS IN THE DIGITAL ARTS</h3>
