--- a/requirements.html
+++ b/requirements.html
@@ -5,7 +5,7 @@
     <title>ATK Course Requirements</title>
   </head>
   <body>
-  <img src="Banner20.jpg" alt="Creative technologies header image" >
+  <img src="images/Banner20.jpg" alt="Creative technologies header image" >
   <h1>Arts Technology Program (ATK)</h1>
   <h2>Course Requirements</h2>
     <h3>Admission and Retention Requirements:</h3>
