--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-I dead
-X_X
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>ATK 301</title>
+  </head>
+  <body>
+    <h1>ATK 301 Projects</h1>
+      <ul>
+        <li><a href="assignment1.html">Assignment 1</a></li>
+        <li><a href="assignment2.html">Assignment 2</a></li>
+      </ul>
+  </body>
+</html>
