--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <h1>ATK 301 Projects</h1>
       <ul>
+        <li><a href="HelloWorld.html">Hello World</a></li>
         <li><a href="assignment1.html">Assignment 1</a></li>
         <li><a href="assignment2.html">Assignment 2</a></li>
       </ul>
