--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <body>
     <h1>ATK 301 Projects</h1>
       <ul>
-        <li><a href="HelloWorld.html">Hello World</a></li>
-        <li><a href="assignment1.html">Assignment 1</a></li>
-        <li><a href="assignment2.html">Assignment 2</a></li>
+        <li><a href="HelloWorld.html" target="_blank">Hello World</a></li>
+        <li><a href="assignment1.html" target="_blank">Assignment 1</a></li>
+        <li><a href="assignment2.html" target="_blank">Assignment 2</a></li>
+        <li><a href="https://brintonjohnson.github.io/ATK301/Exercise2/index.html" target="_blank">Exercise 2</a></li>
+        <li><a href="exercise3.html" target="_blank">Exercise 3</a></li>
       </ul>
   </body>
 </html>
