--- a/exercise3.html
+++ b/exercise3.html
@@ -7,14 +7,14 @@
   <body>
     <h1>Office Ipsum</h1>
     <ul>
-      <li><a href="exercise3.html">Home<a/>
-      <li><a href="http://officeipsum.com" target="_blank">officeispum.com</a>
-      <li><a href="https://illinoisstate.edu/" target="_blank">ISU Home</a>
+      <li><a href="exercise3.html">Home<a/></li>
+      <li><a href="http://officeipsum.com" target="_blank">officeispum.com</a></li>
+      <li><a href="https://illinoisstate.edu/" target="_blank">ISU Home</a></li>
     </ul>
 
     <h2>About Us</h2>
 
-    <p>That sandwich needs to be more playful. I have printed it out, but the animated gif is not moving. Can you please send me the design specs again? There is too much white space. Remember, everything is the same or better. Can you make the font bigger? That's great, but we need to add this 2000 line essay. Try a more powerful color. Try a more powerful colour, but use a <a href="https://en.wikipedia.org/wiki/K-pop">K-pop</a> logo that's not a K-pop logo! Ugh. Can you turn it around in photoshop so we can see more of the front? Is this the best we can do? That's going to be a chunk of change! We don't need a contract, do we? Could you move it a tad to the left? I love it, but can you invert all the colors?</p>
+    <p>That sandwich needs to be more playful. I have printed it out, but the animated gif is not moving. Can you please send me the design specs again? There is too much white space. Remember, everything is the same or better. Can you make the font bigger? That's great, but we need to add this 2000 line essay. Try a more powerful color. Try a more powerful colour, but use a <a href="https://en.wikipedia.org/wiki/K-pop" target="_blank">K-pop</a> logo that's not a K-pop logo! Ugh. Can you turn it around in photoshop so we can see more of the front? Is this the best we can do? That's going to be a chunk of change! We don't need a contract, do we? Could you move it a tad to the left? I love it, but can you invert all the colors?</p>
 
     <h2>What We Do</h2>
       <p>It looks a bit empty, try to make everything bigger. Ugh the hair is just too polarizing. Can you rework to make the pizza look more delicious? Make it look like Apple. That's not what i saw in my head at all. Can you make it look more designed? I know you've made thirty iterations but can we go back to the first one? That was the best version. Thanks for taking the time to make the website, but I already made it in Wix. Just Photoshop out the dog, add a baby, and make the curtains blue. Can you lower the price for the website? Make it high quality and please use html. Can you make the font a bit bigger and change it to times new roman? Jazz it up a little bit</p>
@@ -31,3 +31,4 @@
          <h3><b>But Wait, There's More</b></h3>
       <p>Can't you just take a picture from the internet? And i cant pay you. You might wanna give it another shot. What you've given us is too texty. The flier should feel like a warm handshake. Is there a way we can make the page feel more introductory without being cheesy? I was wondering if my cat could be placed over the logo in the flyer? Can you make the logo bigger? Yes bigger. Bigger still. The logo is too big. I know somebody who can do this for a reasonable cost. I got your invoice... it seems really high, why did you charge so much? Can you make it faster? Are you busy this weekend? I have a new project with a tight deadline. I want you to take it to the next level. You can get my logo from facebook. Can we have another option doing some work for us "pro bono".</p>
     </body>
+    </html>
