--- a/exercise4/exercise4.html
+++ b/exercise4/exercise4.html
@@ -3,9 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <title>Exercise 4</title>
+<link href="exercise4.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <h1>The Poison Sky</h1>
+<img src="images/doctors.jpg" alt="the 5 actors to play the doctor in modern doctor who">
 <p>The default color of this link should be red without an underline and should turn green with an underline when you hover over it: <a href="http://chrisvalleskey.com/fillerama/" target="_blank">http://chrisvalleskey.com/fillerama/</a></p>
 <p>*Insistently* Bow ties are cool! Come on Amy, I'm a normal bloke, tell me what normal blokes do! You've swallowed a planet! No... It's a thing; it's like a plan, but with more greatness.</p>
 <h2>The Fires of Pompeii</h2>
