--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h2> Assignments </h2>
       <ul>
         <li><a href="assignment1.html" target="_blank">Assignment 1</a></li>
-        <li><a href="assignment2.html" target="_blank">Assignment 2</a></li>
-        <li><a href="assignment3/assignment3.html" target="_blank"> assignment 3</a></li>
+        <li><a href="assignment2/assignment2.html" target="_blank">Assignment 2</a></li>
+        <li><a href="assignment3/assignment3.html" target="_blank">Assignment 3</a></li>
       </ul>
     <h2> Exercises </h2>
       <ul>
@@ -18,14 +18,12 @@
         <li><a href="https://brintonjohnson.github.io/ATK301/Exercise2/index.html" target="_blank">Exercise 2</a></li>
         <li><a href="exercise3.html" target="_blank">Exercise 3</a></li>
         <li><a href="exercise4/exercise4.html" target="_blank">Exercise 4</a></li>
-
       </ul>
     <h2> Other </h2>
       <ul>
         <li><a href="https://creativetech.dev/ATK301/index.html" target="_blank"> Lecture Notes</a></li>
-        <li><a href"https://validator.w3.org" target="_blank">HTML Validator</a></li>
+        <li><a href="https://validator.w3.org" target="_blank">HTML Validator</a></li>
         <li><a href="http://overapi.com/css" target="_blank"> CSS Cheat Sheet</a></li>
-
       </ul>
   </body>
 </html>
