--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li><a href="assignment1.html" target="_blank">Assignment 1</a></li>
         <li><a href="assignment2/assignment2.html" target="_blank">Assignment 2</a></li>
         <li><a href="assignment3/assignment3.html" target="_blank">Assignment 3</a></li>
+        <li><a href="assignment4/assignment4.html" target="_blank">Assignment 4</a></li>
       </ul>
     <h2> Exercises </h2>
       <ul>
