--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="https://brintonjohnson.github.io/ATK301/Exercise2/index.html" target="_blank">Exercise 2</a></li>
         <li><a href="exercise3.html" target="_blank">Exercise 3</a></li>
         <li><a href="exercise4/exercise4.html" target="_blank">Exercise 4</a></li>
+        <li><a href="exercise5/exercise5.html" target="_blank">Exercise 5</a></li>
       </ul>
     <h2> Other </h2>
       <ul>
