--- a/assignment4/assignment4.html
+++ b/assignment4/assignment4.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-    <img src="images/Header.jpg" alt="Creative technologies header image" >
+    <span class="textcenter"><p><img src="images/Header.jpg" alt="Creative technologies header image" ></p>
     <h1 class=Header>Arts Technology Program (ATK)</h1>
         <p><b>110 Center for Visual Arts<br>
         Phone:</b> (309) 438-3921<br>
@@ -16,7 +16,7 @@
       </header>
       <main>
     <h2 class=Header>MAJOR IN ARTS TECHNOLOGY</h2>
-      <p>The major in Arts Technology is a 55-hour interdisciplinary program in the College of Fine Arts that emphasizes theory, design, and practice in the application of computer technology to art, music, and theatre. The degree provides undergraduate training and experiences in arts technology to better prepare students with a broad range of knowledge and skills in multimedia design, including digital video and sound, computer graphics and theatre design, digital and MIDI music, and web design.</p>
+      <div id="justify"><p>The major in Arts Technology is a 55-hour interdisciplinary program in the College of Fine Arts that emphasizes theory, design, and practice in the application of computer technology to art, music, and theatre. The degree provides undergraduate training and experiences in arts technology to better prepare students with a broad range of knowledge and skills in multimedia design, including digital video and sound, computer graphics and theatre design, digital and MIDI music, and web design.</p></div>
     </main>
     <nav>
     <h3 class=Header>Navigation</h3>
@@ -27,7 +27,8 @@
     </ul>
   </nav>
   <footer>
-        <p><div id="footerdiv"><i>Sam Ringle <br> <span class="spanstyle"> Creative Technology Major </span><br> Freshman at Illinois State University</i></div></p>
+        <p><div id="footerdiv"><i>Sam Ringle <br> Creative Technology Major <br> Freshman at Illinois State University</i></div></p>
     </footer>
+  </span>
   </body>
 </html>
