--- a/assignment4/classes4.html
+++ b/assignment4/classes4.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-<img src="images/Banner15.jpg" alt="Creative technologies header image" >
-  <h1 class=Header>Arts Technology Program (ATK)</h1>
+<span class="textcenter"><p><img src="images/Banner15.jpg" alt="Creative technologies header image" ></p>
+  <h1 class=Header>Arts Technology Program (ATK)</h1></span>
 </header>
 <main>
   <h2 class=Header>Arts Technology Courses (ATK)</h2>
@@ -46,7 +46,7 @@
       </ul>
     </nav>
     <footer>
-        <p><div id="footerdiv"><i>Sam Ringle <br> <span class="spanstyle"> Creative Technology Major </span><br> Freshman at Illinois State University</i></div></p>
+        <p><div id="footerdiv">Sam Ringle <br> Creative Technology Major <br> Freshman at Illinois State University</div></p>
     </footer>
   </body>
 </html>
