--- a/assignment4/requirements4.html
+++ b/assignment4/requirements4.html
@@ -7,8 +7,8 @@
   </head>
   <body>
   <header>
-  <img src="images/Banner20.jpg" alt="Creative technologies header image" >
-  <h1 class=Header>Arts Technology Program (ATK)</h1>
+  <span class="textcenter"><p><img src="images/Banner20.jpg" alt="Creative technologies header image" ></p>
+  <h1 class=Header>Arts Technology Program (ATK)</h1></span>
 </header>
 <main>
   <h2 class=Header>Course Requirements</h2>
@@ -32,9 +32,9 @@
     <h4 class=Header>Additional Arts Technology Study (15 hours)</h4>
       <p>Select from the following courses after completion of the Fine Arts Core, the Arts Technology Core, and the Arts Technology intermediate portfolio review.</p>
       <ul>
-        <li>3 hours from the following: ATK 240, 300, 340, 345, or 380.</li>
-        <li>3 hours from the following: ATK 300, ART 371, THE 360 with graphic topics, or ATK 380.</li>
-        <li>9 hours from any of the following courses, or other courses that emphasize Arts Technology applications with approval of the program advisor: ATK 260, 300, 320, 340, 345, 380, 390; ART 371 or THE 360; ART 253, 351.24, 351.85; or THE 367; (multiple enrollments are allowed in ATK 300 and 380 may be repeated with different topics or experiences).</li>
+        <li><p>3 hours from the following: ATK 240, 300, 340, 345, or 380.</p></li>
+        <li><p>3 hours from the following: ATK 300, ART 371, THE 360 with graphic topics, or ATK 380.</p></li>
+        <li><p>9 hours from any of the following courses, or other courses that emphasize Arts Technology applications with approval of the program advisor: ATK 260, 300, 320, 340, 345, 380, 390; ART 371 or THE 360; ART 253, 351.24, 351.85; or THE 367; (multiple enrollments are allowed in ATK 300 and 380 may be repeated with different topics or experiences).</p></li>
       </ul>
     <h4 class=Header>Capstone Experience in Arts Technology (3 hours)</h4>
       <p>Internship in Arts Technology (ATK 398 or comparable culminating experience in multimedia design as approved by the program advisor e.g. ATK 260).</p>
