--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="assignment2/assignment2.html" target="_blank">Assignment 2</a></li>
         <li><a href="assignment3/assignment3.html" target="_blank">Assignment 3</a></li>
         <li><a href="assignment4/assignment4.html" target="_blank">Assignment 4</a></li>
+        <li><a href="assignment5/assignment5.html" target="_blank">Assignment 5</a></li>
       </ul>
     <h2> Exercises </h2>
       <ul>
@@ -20,6 +21,7 @@
         <li><a href="exercise3.html" target="_blank">Exercise 3</a></li>
         <li><a href="exercise4/exercise4.html" target="_blank">Exercise 4</a></li>
         <li><a href="exercise5/exercise5.html" target="_blank">Exercise 5</a></li>
+        <li><a href="exercise6/exercise6.html" target="_blank">Exercise 6</a></li>
       </ul>
     <h2> Other </h2>
       <ul>
