--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="exercise4/exercise4.html" target="_blank">Exercise 4</a></li>
         <li><a href="exercise5/exercise5.html" target="_blank">Exercise 5</a></li>
         <li><a href="exercise6/exercise6.html" target="_blank">Exercise 6</a></li>
+        <li><a href="exercise7/exercise7.html" target="_blank">Exercise 7</a></li>
       </ul>
     <h2> Other </h2>
       <ul>
