--- a/assignment5/assignment5.html
+++ b/assignment5/assignment5.html
@@ -9,10 +9,10 @@
     <header><p><span class="purple"><span class="s">A</span><span class="m1"> BOOTS RILEY</span><span class="s"> FILM</span></p></span></header>
     <main><h1><span class="red">SORRY</span> <span class="pink">TO<br> BOTHER</span> <span class="red">YOU</span></h1>
 <span id="person"><img src="images/Lakeith.jpg" alt="Movie poster" ></span>
-    <div class="justify"><p><span class="m1">STARRING</span> <span class="m2"><span class="red">LAKEITH STANFIELD</span><span class="pink"> TESSA THOMPSON</span><br>
+    <p id=justify><span class="m1">STARRING</span> <span class="m2"><span class="red">LAKEITH STANFIELD</span><span class="pink"> TESSA THOMPSON</span><br>
     <span class="red">JERMAINE FOWLER</span><span class="pink"> OMARI HARWICK</span> <span class="red">TERRY CREWS</span><br>
     <span class="pink">PATTON OSWALT</span> <span class="red">DAVID CROSS</span></span><span class="m1"> WITH</span><span class="m2"><span class="pink"> DANNY GLOVER</span></span><br>
-    <span class="m1">WITH</span> <span class ="m2"><span class="red">STEVEN YEUN</span></span><span class="m1"> AND</span><span class="m2"><span class="pink"> ARMIE HAMMER</span></span></p></div></main>
+    <span class="m1">WITH</span> <span class ="m2"><span class="red">STEVEN YEUN</span></span><span class="m1"> AND</span><span class="m2"><span class="pink"> ARMIE HAMMER</span></span></p></main>
     <nav><p><div class="center"><a href="http://www.SORRYTOBOTHERYOU.movie" target="_blank">SORRYTOBOTHERYOU.MOVIE</a></p></nav></div>
 <div class="center"><p><img src="images/RatedR.png" alt="Movie Rated R" ></p></div>
   </body>
