--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="assignment3/assignment3.html" target="_blank">Assignment 3</a></li>
         <li><a href="assignment4/assignment4.html" target="_blank">Assignment 4</a></li>
         <li><a href="assignment5/assignment5.html" target="_blank">Assignment 5</a></li>
+        <li><a href="assignment6/assignment6.html" target="_blank">Assignment 6</a></li>
       </ul>
     <h2> Exercises </h2>
       <ul>
