--- a/assignment6/assignment6.html
+++ b/assignment6/assignment6.html
@@ -24,7 +24,7 @@
 </nav>
 <main>
   <h2>This is a secondary header in Helvetica</h2>
-  <img src="images/a61.jpg" alt="Brick wall"</a>
+  <img src="images/a61.jpg" alt="Brick wall">
   <p class="bgeorge">These paragraphs are in the Georgia font and are justified. Don't use the &lt;strong&gt; or &lt;b&gt; tags to make these top three paragraphs bold - use styles.</p>
 
   <p class="bgeorge">Notice that the page is centered and it has a border around it. The photo also has a border around it. Replicate all of the padding and margins around the elements of the page.</p>
