--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -4,27 +4,28 @@
 	<meta charset="UTF-8">
 	<title>Portfolio</title>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	  <script type="text/jquery" src="slick/slick.min.js"></script>
+	  <script type="text/javascript" src="js/slick/slick.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="js/slick/slick.css"/>
 	 <link rel="stylesheet" type="text/css" href="js/slick/slick-theme.css"/>
 	<link href="portfolio.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
-<body>
+<div id="wrapper">
 
+<body>
 
 
  <script type="text/javascript">
 	 $(document).ready(function(){
-		 $('.slick-slider').slick({
-  slidesToShow: 1,
-  slidesToScroll: 1,
-  autoplay: true,
-  autoplaySpeed: 2000,
-});
-	 });
+		 $('.slideshow').slick({
+		   dots: true,
+		   infinite: true,
+		   autoplaySpeed: 500,
+		   fade: true,
+			 centerMode: true,
+	});
+	});
  </script>
-
-	<div id="wrapper">
 		<header>
 			<h1>SNRINGLE Creative Technologies</h1>
 		</header>
@@ -36,15 +37,14 @@
 			</ul>
 		</nav>
 		<main>
-			<div class="slick-slider">
+			<div class="slideshow">
 	  <div><img src="images/img1.png"></div>
 	  <div><img src="images/img2.png"></div>
 	  <div><img src="images/img3.png"></div>
 	</div>
 		</main>
 		<footer>
-			<p id=copyright>©Me2020</p>
-	</div>
+			<p id=copyright>©Me2020<i class="fab fa-instagram"></i></p>
 	</div>
 </body>
 </html>
