--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -20,8 +20,13 @@
 		 $('.slideshow').slick({
 		   dots: true,
 		   infinite: true,
-		   autoplaySpeed: 500,
+		   autoplaySpeed: 5000,
 		   fade: true,
+			 pauseOnHover: true,
+			 dots: true,
+			 speed: 3000,
+			 variableWidth: true,
+			 variableHeight: true,
 			 centerMode: true,
 	});
 	});
@@ -38,13 +43,15 @@
 		</nav>
 		<main>
 			<div class="slideshow">
-	  <div><img src="images/img1.png"></div>
-	  <div><img src="images/img2.png"></div>
-	  <div><img src="images/img3.png"></div>
+	  <div><img src="images/img1.JPG"></div>
+	  <div><img src="images/img2.jpg"></div>
+	  <div><img src="images/img3.jpg"></div>
+		<div><img src="images/img4.jpg"></div>
 	</div>
 		</main>
 		<footer>
-			<p id=copyright>©Me2020<i class="fab fa-instagram"></i></p>
+			<p id=copyright>©Me2020</p>
+			<a href="https://www.instagram.com/samuelnphotography/" target="_blank"><i class="fab fa-instagram"></i></a>
 	</div>
 </body>
 </html>
