--- a/Portfolio/home/portfolio.html
+++ b/Portfolio/home/portfolio.html
@@ -4,30 +4,24 @@
 	<meta charset="UTF-8">
 	<title>Portfolio</title>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	  <script type="text/javascript" src="js/slick/slick.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="js/slick/slick.css"/>
-	 <link rel="stylesheet" type="text/css" href="js/slick/slick-theme.css"/>
+	  <script type="text/javascript" src="../js/slick/slick.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="../js/slick/slick.css"/>
+	 <link rel="stylesheet" type="text/css" href="../js/slick/slick-theme.css"/>
 	<link href="portfolio.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
-<div id="wrapper">
-
 <body>
-
-
+	<div id="wrapper">
  <script type="text/javascript">
 	 $(document).ready(function(){
 		 $('.slideshow').slick({
 		   dots: true,
 		   infinite: true,
-		   autoplaySpeed: 5000,
-		   fade: true,
-			 pauseOnHover: true,
 			 dots: true,
 			 speed: 3000,
-			 variableWidth: true,
 			 variableHeight: true,
 			 centerMode: true,
+
 	});
 	});
  </script>
@@ -36,17 +30,18 @@
 		</header>
 		<nav>
 			<ul>
-				<li><a href="Portfolio-main.html" target="_blank">Home</a></li>
-				<li><a href="Photography.html" target="_blank">Photography</a></li>
-				<li><a href="Other.html" target="_blank">Other Artwork</a></li>
+				<li><a href="portfolio.html">Home</a></li>
+				<li><a href="../sub1/sub1.html">Photography</a></li>
+				<li><a href="../sub2/sub2.html">Other Artwork</a></li>
 			</ul>
 		</nav>
 		<main>
 			<div class="slideshow">
-	  <div><img src="images/img1.JPG"></div>
-	  <div><img src="images/img2.jpg"></div>
-	  <div><img src="images/img3.jpg"></div>
-		<div><img src="images/img4.jpg"></div>
+	  <div id="img1"><img src="../images/img1.JPG">
+		<p class="txt">Test</p></div>
+	  <div><img src="../images/img2.jpg"></div>
+	  <div><img src="../images/img3.jpg"></div>
+		<div><img src="../images/img4.jpg"></div>
 	</div>
 		</main>
 		<footer>
