--- a/Portfolio/home/portfolio.html
+++ b/Portfolio/home/portfolio.html
@@ -37,11 +37,14 @@
 		</nav>
 		<main>
 			<div class="slideshow">
-	  <div id="img1"><img src="../images/img1.JPG">
-		<p class="txt">Test</p></div>
-	  <div><img src="../images/img2.jpg"></div>
-	  <div><img src="../images/img3.jpg"></div>
-		<div><img src="../images/img4.jpg"></div>
+	  <div class="img"><img src="../images/img1.JPG">
+		<p class="txt">Photography</p></div>
+		<div class="img"><img src="../images/img2.JPG">
+		<p class="txt">Photography</p></div>
+		<div class="img"><img src="../images/img3.JPG">
+		<p class="txt">Digital painting</p></div>
+		<div class="img"><img src="../images/img4.JPG">
+		<p class="txt">Digital Painting</p></div>
 	</div>
 		</main>
 		<footer>
