--- a/Portfolio/home/portfolio.html
+++ b/Portfolio/home/portfolio.html
@@ -39,11 +39,11 @@
 			<div class="slideshow">
 	  <div class="img"><img src="../images/img1.JPG">
 		<p class="txt">Photography</p></div>
-		<div class="img"><img src="../images/img2.JPG">
+		<div class="img"><img src="../images/img2.jpg">
 		<p class="txt">Photography</p></div>
-		<div class="img"><img src="../images/img3.JPG">
+		<div class="img"><img src="../images/img3.jpg">
 		<p class="txt">Digital painting</p></div>
-		<div class="img"><img src="../images/img4.JPG">
+		<div class="img"><img src="../images/img4.jpg">
 		<p class="txt">Digital Painting</p></div>
 	</div>
 		</main>
