--- a/Portfolio/sub2/sub2.html
+++ b/Portfolio/sub2/sub2.html
@@ -6,17 +6,14 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	  <script type="text/javascript" src="../js/slick/slick.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="../js/slick/slick.css"/>
-	 <link rel="stylesheet" type="text/css" href="../js/slick/slick-theme.css"/>
+	<script src="../js/fancybox/jquery.fancybox.js"></script>
+	<link rel="stylesheet" href="../js/fancybox/jquery.fancybox.css"/ >
+	<link rel="stylesheet" type="text/css" href="../js/slick/slick-theme.css"/>
 	<link href="sub2.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body>
 	<div id="wrapper">
- <script type="text/javascript">
-	 $(document).ready(function(){
-
-	});
- </script>
 		<header>
 			<h1>SNRINGLE Creative Technologies</h1>
 		</header>
@@ -28,7 +25,9 @@
 			</ul>
 		</nav>
 		<main>
-
+	<div class="mosaic">
+		<a data-fancybox="gallery" href="../images/Other/01.jpg"><img src="../images/Other/01thumb.jpg"></a>
+		<a data-fancybox="gallery" href="../images/Other/02.JPG"><img src="../images/Other/02thumb.JPG"></a>
 	</div>
 		</main>
 		<footer>
