--- a/Portfolio/home/portfolio.html
+++ b/Portfolio/home/portfolio.html
@@ -9,6 +9,7 @@
 	 <link rel="stylesheet" type="text/css" href="../js/slick/slick-theme.css"/>
 	<link href="portfolio.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet"> 
 </head>
 <body>
 	<div id="wrapper">
@@ -21,6 +22,7 @@
 			 speed: 3000,
 			 variableHeight: true,
 			 centerMode: true,
+			 variableWidth: true
 
 	});
 	});
@@ -43,8 +45,8 @@
 		<p class="txt">Photography</p></div>
 		<div class="img"><img src="../images/img3.jpg">
 		<p class="txt">Digital painting</p></div>
-		<div class="img"><img src="../images/img4.jpg">
-		<p class="txt">Digital Painting</p></div>
+		<div class="img4"><img src="../images/img4.jpg">
+		<p class="txt4">Digital Painting</p></div>
 	</div>
 		</main>
 		<footer>
