--- a/Portfolio/sub2/sub2.html
+++ b/Portfolio/sub2/sub2.html
@@ -27,7 +27,7 @@
 		<main>
 	<div class="mosaic">
 		<a data-fancybox="gallery" href="../images/Other/01.jpg"><img src="../images/Other/01thumb.jpg"></a>
-		<a data-fancybox="gallery" href="../images/Other/02.JPG"><img src="../images/Other/02thumb.JPG"></a>
+		<a data-fancybox="gallery" href="../images/Other/02.jpg"><img src="../images/Other/02thumb.jpg"></a>
 	</div>
 		</main>
 		<footer>
