--- a/Portfolio/home - Copy/portfolio.html
+++ b/Portfolio/home - Copy/portfolio.html
@@ -21,7 +21,7 @@
 		   dots: true,
 		   infinite: true,
 			 dots: true,
-			 speed: 2500,
+			 speed: 3000,
 			 variableHeight: true,
 			 centerMode: true,
 			 variableWidth: true
@@ -46,18 +46,14 @@
 		</nav>
 		<main>
 			<div class="slideshow">
-	  <div class="img"><a href="../images/img1.JPG" data-fancybox="images">
-			<img src="../images/img1.JPG" alt="Long exposure steel wool photo" /></a>
-			<p class="txt">Photography</p></div>
-		<div class="img"><a href="../images/img2.jpg" data-fancybox="images">
-			<img src="../images/img2.jpg" alt="Photo of a bird's nest" /></a>
-			<p class="txt">Photography</p></div>
-		<div class="img"><a href="../images/img3.jpg" data-fancybox="images">
-			<img src="../images/img3.jpg" alt="Digital Painting" /></a>
-			<p class="txt">Digital Painting</p></div>
-		<div class="img4"><a href="../images/img4.jpg" data-fancybox="images">
-			<img src="../images/img4.jpg" alt="Digital Painting" /></a>
-			<p class="txt">Digital Painting</p></div>
+		<div class="img"><img src="../images/img1.JPG" alt="Long exposure steel wool photo">
+		<p class="txt">Photography</p></div>
+		<div class="img"><img src="../images/img2.jpg" alt="Photo of a bird's nest">
+		<p class="txt">Photography</p></div>
+		<div class="img"><img src="../images/img3.jpg" alt="Digital painting">
+		<p class="txt">Digital painting</p></div>
+		<div class="img4"><img src="../images/img4.jpg" alt="digital painting">
+		<p class="txt4">Digital Painting</p></div>
 	</div>
 		</main>
 		<footer>
