--- a/Portfolio/sub1/sub1.html
+++ b/Portfolio/sub1/sub1.html
@@ -6,9 +6,9 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	  <script type="text/javascript" src="../js/slick/slick.min.js"></script>
 		<script src="../js/fancybox/jquery.fancybox.js"></script>
-		<link rel="stylesheet" href="../js/fancybox/jquery.fancybox.css"/ >
-	<link rel="stylesheet" type="text/css" href="../js/slick/slick.css"/>
-	 <link rel="stylesheet" type="text/css" href="../js/slick/slick-theme.css"/>
+		<link rel="stylesheet" href="../js/fancybox/jquery.fancybox.css">
+	<link rel="stylesheet" type="text/css" href="../js/slick/slick.css">
+	 <link rel="stylesheet" type="text/css" href="../js/slick/slick-theme.css">
 	<link href="sub1.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
@@ -31,18 +31,20 @@
 		</nav>
 		<main>
 			<div class="mosaic">
-				<a data-fancybox="gallery" href="../images/Photography/01.jpg"><img src="../images/Photography/01thumb.jpg"></a>
-				<a data-fancybox="gallery" href="../images/Photography/02.JPG"><img src="../images/Photography/02thumb.JPG"></a>
-				<a data-fancybox="gallery" href="../images/Photography/03.JPG"><img src="../images/Photography/03thumb.JPG"></a>
-				<a data-fancybox="gallery" href="../images/Photography/04.jpg"><img src="../images/Photography/04thumb.jpg"></a>
-				<a data-fancybox="gallery" href="../images/Photography/05.jpg"><img src="../images/Photography/05thumb.jpg"></a>
-				<a data-fancybox="gallery" href="../images/Photography/06.jpg"><img src="../images/Photography/06thumb.jpg"></a>
-				<a data-fancybox="gallery" href="../images/Photography/07.jpg"><img src="../images/Photography/07thumb.jpg"></a>
-				<a data-fancybox="gallery" href="../images/Photography/08.jpg"><img src="../images/Photography/08thumb.jpg"></a>
+				<a data-fancybox="gallery" href="../images/Photography/01.jpg"><img src="../images/Photography/01thumb.jpg" alt="picture of a sidewalk with chalk on it"></a>
+				<a data-fancybox="gallery" href="../images/Photography/02.JPG"><img src="../images/Photography/02thumb.JPG" alt="Long exposure steel wool photo"></a>
+				<a data-fancybox="gallery" href="../images/Photography/03.JPG"><img src="../images/Photography/03thumb.JPG" alt="Long exposure steel wool photo"></a>
+				<a data-fancybox="gallery" href="../images/Photography/04.jpg"><img src="../images/Photography/04thumb.jpg" alt="long exposure photo of car lights"></a>
+				<a data-fancybox="gallery" href="../images/Photography/05.jpg"><img src="../images/Photography/05thumb.jpg" alt="picture of a rock with a smiley face painted on it"></a>
+				<a data-fancybox="gallery" href="../images/Photography/06.jpg"><img src="../images/Photography/06thumb.jpg" alt="picture of a lamp"></a>
+				<a data-fancybox="gallery" href="../images/Photography/07.jpg"><img src="../images/Photography/07thumb.jpg" alt="picture of ice on a pine tree"></a>
+				<a data-fancybox="gallery" href="../images/Photography/08.jpg"><img src="../images/Photography/08thumb.jpg" alt="picture of a bird's nest"></a>
+			</div>
 		</main>
 		<footer>
 			<p id=copyright>©Me2020</p>
 			<a href="https://www.instagram.com/samuelnphotography/" target="_blank"><i class="fab fa-instagram"></i></a>
-	</div>
+		</footer>
+</div>
 </body>
 </html>
