--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li><a href="https://creativetech.dev/ATK301/index.html" target="_blank"> Lecture Notes</a></li>
         <li><a href="https://validator.w3.org" target="_blank">HTML Validator</a></li>
         <li><a href="http://overapi.com/css" target="_blank"> CSS Cheat Sheet</a></li>
+        <li><a href="Portfolio/home/portfolio.html" target="_blank">Portfolio</a></li>
       </ul>
   </body>
 </html>
